--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,6 @@ spring:
   liquibase:
     change-log: classpath:/db/liquibase-changelog.xml
     enabled: true
+jwt:
+  secret: ${JWT-SECRET:bababoooyey}
+  expiration: ${120000}
