finished everything up with security

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,4 +11,4 @@ spring:
     enabled: true
 jwt:
   secret: ${JWT-SECRET:bababoooyey}
-  expiration: ${120000}
+  expiration: ${JWT-EXPIRATION:120000}
